Додано рибу-текст

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <main class="main">
       <section class="hero">
         <h1 class="section-title">Title</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eaque?
+        </p>
       </section>
     </main>
     <footer class="footer"></footer>
