--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mobile App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container header__block">
       <a href="#" class="logo">Mobileapp</a>
       <nav class="header__nav">
-        <ul>
+        <ul class="header__nav-list">
           <li><a href="#">HOME</a></li>
           <li><a href="#">FEATURES</a></li>
           <li><a href="#">TEAM</a></li>
@@ -26,15 +26,19 @@
           <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
-    </header>
-    <main class="main">
-      <section class="hero">
+    </div>
+  </header>
+  <main class="main">
+    <section class="hero">
+      <div class="container">
         <h1 class="section-title">Title</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eaque?
         </p>
-      </section>
-    </main>
-    <footer class="footer"></footer>
-  </body>
+      </div>
+    </section>
+  </main>
+  <footer class="footer"></footer>
+</body>
+
 </html>
