--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
   </header>
   <main class="main">
     <section class="hero">
-      <div class="container">
-        <h1 class="section-title">Title</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eaque?
-        </p>
+      <div class="container hero__container">
+        <div class="hero__inner">
+          <h1 class="hero__title">Introducing Mobileapp</h1>
+          <p class="hero__subtitle">
+            Maecenas vitae tellus sapien. Prasent
+          </p>
+          <ul class="hero__list">
+            <li class="hero__list-item">
+              semper scelerisque tristique a enim
+            </li>
+            <li class="hero__list-item">
+              Integer ut mattis nulla, eget vehicula elit
+            </li>
+            <li class="hero__list-item">
+              Prasent rutrum ac nunc et
+            </li>
+          </ul>
+          <button type="button" class="btn hero__btn">Download</button>
+        </div>
+        <img src="./images/hero-image.png" class="hero__image" width="895" height="553" alt="phones">
       </div>
     </section>
   </main>
